cmake_minimum_required(VERSION 3.27)
project(leetcode)

set(CMAKE_CXX_STANDARD 14)

add_executable(leetcode
        dist/other/constants.js
        dist/other/content.js
        dist/other/count.js
        dist/other/leetcode.js
        dist/other/stats.js
        dist/other/utils.js
        dist/badges.js
        dist/constants.js
        dist/content.js
        dist/count.js
        dist/index.js
        dist/leetcode.js
        dist/stats.js
        dist/sync.js
        dist/tasks.js
        dist/utils.js
        dist/waka.js
        декабрь.23/01-12-23/121.ts
        декабрь.23/01-12-23/136.ts
        декабрь.23/01-12-23/1662.ts
        декабрь.23/01-12-23/217.ts
        декабрь.23/01-12-23/268.ts
        декабрь.23/01-12-23/287.ts
        декабрь.23/01-12-23/303.ts
        декабрь.23/01-12-23/448.ts
        декабрь.23/01-12-23/70.ts
        декабрь.23/01-12-23/977.ts
        декабрь.23/02-12-23/1160.ts
        декабрь.23/03-12-23/1266.ts
        декабрь.23/04-12-23/2264.ts
        декабрь.23/05-12-23/1688.ts
        декабрь.23/06-12-23/1716.ts
        декабрь.23/07-12-23/1903.ts
        декабрь.23/08-12-23/606.ts
        декабрь.23/09-12-23/94.ts
        декабрь.23/10-12-23/867.ts
        декабрь.23/11-12-23/1287.ts
        декабрь.23/12-12-23/1464.ts
        декабрь.23/13-12-23/1582.ts
        декабрь.23/14-12-23/2482.ts
        декабрь.23/15-12-23/1436.ts
        декабрь.23/18-12-23/1913.ts
        декабрь.23/19-12-23/661.ts
        декабрь.23/20-12-23/2706.ts
        декабрь.23/21-12-23/1673.ts
        декабрь.23/22-12-23/1422.ts
        декабрь.23/23-12-23/1496.ts
        декабрь.23/24-12-23/1758.ts
        декабрь.23/25-12-23/91.ts
        декабрь.23/27-12-23/1578.ts
        декабрь.23/30-12-23/1897.ts
        декабрь.23/31-12-23/1624.ts
        другое/отборочные.тинькофф.аисд/1.py
        другое/отборочные.тинькофф.аисд/2.py
        другое/отборочные.тинькофф.аисд/3.js
        другое/отборочные.тинькофф.аисд/3.py
        другое/отборочные.тинькофф.аисд/4.py
        другое/отборочные.тинькофф.аисд/5.py
        другое/отборочные.тинькофф.аисд/5.ts
        другое/отборочные.тинькофф.аисд/example.py
        другое/отборочные.тинькофф.стажировка.23/1.js
        другое/отборочные.тинькофф.стажировка.23/1.md
        другое/отборочные.тинькофф.стажировка.23/2.js
        другое/отборочные.тинькофф.стажировка.23/2.md
        другое/отборочные.тинькофф.стажировка.23/3.js
        другое/отборочные.тинькофф.стажировка.23/3.md
        другое/отборочные.тинькофф.стажировка.23/4.js
        другое/отборочные.тинькофф.стажировка.23/4.md
        другое/отборочные.тинькофф.стажировка.23/5.js
        другое/отборочные.тинькофф.стажировка.23/5.md
        другое/отборочные.тинькофф.стажировка.23/6.js
        другое/отборочные.тинькофф.стажировка.23/6.md
        другое/тинькофф.аисд/1/A.py
        другое/тинькофф.аисд/1/B.py
        другое/тинькофф.аисд/1/D.py
        другое/тинькофф.аисд/1/E.py
        другое/тинькофф.аисд/1/F.py
        другое/тинькофф.аисд/1/G.py
        другое/тинькофф.аисд/1/G.ts
        другое/тинькофф.аисд/1/H.py
        другое/тинькофф.аисд/1/H.ts
        другое/тинькофф.аисд/1/I.py
        другое/тинькофф.аисд/1/I.ts
        другое/тинькофф.аисд/1/In.py
        другое/тинькофф.аисд/1/J.py
        другое/тинькофф.аисд/1/J.ts
        другое/тинькофф.аисд/1/контест.pdf
        другое/тинькофф.аисд/1/С.py
        другое/тинькофф.аисд/2/A.py
        другое/тинькофф.аисд/2/A.ts
        другое/тинькофф.аисд/2/B.py
        другое/тинькофф.аисд/2/C.ts
        другое/тинькофф.аисд/2/D.py
        другое/тинькофф.аисд/2/D.ts
        другое/тинькофф.аисд/2/E.py
        другое/тинькофф.аисд/2/E.ts
        другое/тинькофф.аисд/2/F.cpp
        другое/тинькофф.аисд/2/F.py
        другое/тинькофф.аисд/2/F.ts
        другое/тинькофф.аисд/2/F1.js
        другое/тинькофф.аисд/2/G.py
        другое/тинькофф.аисд/2/G.ts
        другое/тинькофф.аисд/2/H.py
        другое/тинькофф.аисд/2/H.ts
        другое/тинькофф.аисд/2/контест.pdf
        другое/тинькофф.аисд/2/С.py
        другое/тинькофф.аисд/3/A.py
        другое/тинькофф.аисд/3/A.ts
        другое/тинькофф.аисд/3/B.cpp
        другое/тинькофф.аисд/3/B.py
        другое/тинькофф.аисд/3/B.ts
        другое/тинькофф.аисд/3/B1.js
        другое/тинькофф.аисд/3/D.py
        другое/тинькофф.аисд/3/D.ts
        другое/тинькофф.аисд/3/E.py
        другое/тинькофф.аисд/3/F.cpp
        другое/тинькофф.аисд/3/F.js
        другое/тинькофф.аисд/3/F.py
        другое/тинькофф.аисд/3/F.ts
        другое/тинькофф.аисд/3/контест.pdf
        другое/тинькофф.аисд/3/С.py
        другое/тинькофф.аисд/4/A.cpp
        другое/тинькофф.аисд/4/A.js
        другое/тинькофф.аисд/4/A.py
        другое/тинькофф.аисд/4/A.ts
        другое/тинькофф.аисд/4/B.cpp
        другое/тинькофф.аисд/4/B.js
        другое/тинькофф.аисд/4/B.ts
        другое/тинькофф.аисд/4/C.cpp
        другое/тинькофф.аисд/4/D.cpp
        другое/тинькофф.аисд/4/D.js
        другое/тинькофф.аисд/4/D.ts
        другое/тинькофф.аисд/4/E.cpp
        другое/тинькофф.аисд/4/F.cpp
        другое/тинькофф.аисд/4/G.cpp
        другое/тинькофф.аисд/4/контест.pdf
        март.24/03-03-24/19.ts
        март.24/05-03-24/1750.ts
        март.24/10-03-24/349.ts
        март.24/11-03-24/791.ts
        март.24/14-03-24/1455.cpp
        март.24/14-03-24/1486.cpp
        март.24/14-03-24/1518.cpp
        март.24/14-03-24/930.ts
        ноябрь.23/01-11-23/501.ts
        ноябрь.23/02-11-23/2265.ts
        ноябрь.23/02-11-23/2370.ts
        ноябрь.23/02-11-23/2625.ts
        ноябрь.23/02-11-23/520.ts
        ноябрь.23/03-11-23/1441.ts
        ноябрь.23/03-11-23/1960.ts
        ноябрь.23/04-11-23/1503.ts
        ноябрь.23/05-11-23/1535.ts
        ноябрь.23/06-11-23/1011.ts
        ноябрь.23/06-11-23/1768.ts
        ноябрь.23/06-11-23/1770.ts
        ноябрь.23/06-11-23/1845.ts
        ноябрь.23/06-11-23/2627.ts
        ноябрь.23/06-11-23/2694.ts
        ноябрь.23/06-11-23/2704.ts
        ноябрь.23/06-11-23/2705.ts
        ноябрь.23/06-11-23/2715.ts
        ноябрь.23/06-11-23/2721.ts
        ноябрь.23/06-11-23/2722.ts
        ноябрь.23/06-11-23/2726.ts
        ноябрь.23/06-11-23/389.ts
        ноябрь.23/06-11-23/410.ts
        ноябрь.23/07-11-23/1041.ts
        ноябрь.23/07-11-23/1232.ts
        ноябрь.23/07-11-23/1275.ts
        ноябрь.23/07-11-23/13.ts
        ноябрь.23/07-11-23/1491.ts
        ноябрь.23/07-11-23/1502.ts
        ноябрь.23/07-11-23/1523.ts
        ноябрь.23/07-11-23/1572.ts
        ноябрь.23/07-11-23/1672.ts
        ноябрь.23/07-11-23/1822.ts
        ноябрь.23/07-11-23/1921.ts
        ноябрь.23/07-11-23/206.ts
        ноябрь.23/07-11-23/21.ts
        ноябрь.23/07-11-23/242.ts
        ноябрь.23/07-11-23/2693.ts
        ноябрь.23/07-11-23/28.ts
        ноябрь.23/07-11-23/445.ts
        ноябрь.23/07-11-23/459.ts
        ноябрь.23/07-11-23/54.ts
        ноябрь.23/07-11-23/58.ts
        ноябрь.23/07-11-23/657.ts
        ноябрь.23/07-11-23/66.ts
        ноябрь.23/07-11-23/67.ts
        ноябрь.23/07-11-23/682.ts
        ноябрь.23/07-11-23/73.ts
        ноябрь.23/07-11-23/860.ts
        ноябрь.23/07-11-23/896.ts
        ноябрь.23/07-11-23/976.ts
        ноябрь.23/08-11-23/2849.ts
        ноябрь.23/09-11-23/1045.sql
        ноябрь.23/09-11-23/1068.sql
        ноябрь.23/09-11-23/1070.sql
        ноябрь.23/09-11-23/1075.sql
        ноябрь.23/09-11-23/1141.sql
        ноябрь.23/09-11-23/1148.sql
        ноябрь.23/09-11-23/1174.sql
        ноябрь.23/09-11-23/1193.sql
        ноябрь.23/09-11-23/1211.sql
        ноябрь.23/09-11-23/1251.sql
        ноябрь.23/09-11-23/1280.sql
        ноябрь.23/09-11-23/1378.sql
        ноябрь.23/09-11-23/1581.sql
        ноябрь.23/09-11-23/1633.sql
        ноябрь.23/09-11-23/1661.sql
        ноябрь.23/09-11-23/1683.sql
        ноябрь.23/09-11-23/1729.sql
        ноябрь.23/09-11-23/1731.sql
        ноябрь.23/09-11-23/1759.ts
        ноябрь.23/09-11-23/1934.sql
        ноябрь.23/09-11-23/197.sql
        ноябрь.23/09-11-23/2356.sql
        ноябрь.23/09-11-23/550.sql
        ноябрь.23/09-11-23/570.sql
        ноябрь.23/09-11-23/577.sql
        ноябрь.23/09-11-23/584.sql
        ноябрь.23/09-11-23/595.sql
        ноябрь.23/09-11-23/596.sql
        ноябрь.23/09-11-23/619.sql
        ноябрь.23/09-11-23/620.sql
        ноябрь.23/13-11-23/2785.ts
        ноябрь.23/14-11-23/1930.ts
        ноябрь.23/15-11-23/1846.ts
        ноябрь.23/16-11-23/1980.ts
        ноябрь.23/17-11-23/1877.ts
        ноябрь.23/19-11-23/1887.ts
        ноябрь.23/20-11-23/2391.ts
        ноябрь.23/21-11-23/1814.ts
        ноябрь.23/22-11-23/1424.ts
        ноябрь.23/23-11-23/1630.ts
        ноябрь.23/24-11-23/1561.ts
        ноябрь.23/25-11-23/1685.ts
        ноябрь.23/26-11-23/1727.ts
        ноябрь.23/26-11-23/84.ts
        ноябрь.23/26-11-23/85.ts
        ноябрь.23/27-11-23/935.ts
        ноябрь.23/28-11-23/1071.ts
        ноябрь.23/28-11-23/1343.ts
        ноябрь.23/28-11-23/1431.ts
        ноябрь.23/28-11-23/151.ts
        ноябрь.23/28-11-23/1876.ts
        ноябрь.23/28-11-23/2147.ts
        ноябрь.23/28-11-23/238.ts
        ноябрь.23/28-11-23/2932.ts
        ноябрь.23/28-11-23/345.ts
        ноябрь.23/28-11-23/377.ts
        ноябрь.23/28-11-23/605.ts
        ноябрь.23/28-11-23/698.ts
        ноябрь.23/29-11-23/191.ts
        ноябрь.23/30-11-23/443.ts
        ноябрь.23/30-11-23/643.ts
        октябрь.23/15-10-23/2240.ts
        октябрь.23/16-10-23/1884.ts
        октябрь.23/19-10-23/1.ts
        октябрь.23/19-10-23/20.ts
        октябрь.23/19-10-23/2458.ts
        октябрь.23/19-10-23/26.ts
        октябрь.23/19-10-23/3.ts
        октябрь.23/19-10-23/4.ts
        октябрь.23/19-10-23/9.ts
        октябрь.23/22-10-23/2666.ts
        октябрь.23/24-10-23/1700.ts
        октябрь.23/26-10-23/823.ts
        октябрь.23/27-10-23/11.ts
        октябрь.23/27-10-23/15.ts
        октябрь.23/27-10-23/5.ts
        октябрь.23/27-10-23/779.ts
        октябрь.23/28-10-23/1220.ts
        октябрь.23/28-10-23/2618.ts
        октябрь.23/28-10-23/2619.ts
        октябрь.23/28-10-23/2620.ts
        октябрь.23/28-10-23/2621.ts
        октябрь.23/28-10-23/2622.ts
        октябрь.23/28-10-23/2623.ts
        октябрь.23/28-10-23/2624.ts
        октябрь.23/28-10-23/2626.ts
        октябрь.23/28-10-23/2629.ts
        октябрь.23/28-10-23/2631.ts
        октябрь.23/28-10-23/2634.ts
        октябрь.23/28-10-23/2635.ts
        октябрь.23/28-10-23/2637.ts
        октябрь.23/28-10-23/2639.ts
        октябрь.23/28-10-23/2648.ts
        октябрь.23/29-10-23/2723.ts
        октябрь.23/30-10-23/101.ts
        октябрь.23/30-10-23/102.ts
        октябрь.23/30-10-23/103.ts
        октябрь.23/30-10-23/107.ts
        октябрь.23/30-10-23/1356.ts
        октябрь.23/31-10-23/2.ts
        октябрь.23/31-10-23/7.ts
        февраль.24/01-02-24/2966.ts
        февраль.24/02-02-24/1291.ts
        февраль.24/03-02-24/1043.ts
        февраль.24/04-02-24/1128.ts
        февраль.24/04-02-24/1507.ts
        февраль.24/04-02-24/3024.ts
        февраль.24/04-02-24/3028.ts
        февраль.24/04-02-24/76.ts
        февраль.24/05-02-24/2928.ts
        февраль.24/05-02-24/2937.ts
        февраль.24/05-02-24/2942.ts
        февраль.24/05-02-24/2946.ts
        февраль.24/05-02-24/2951.ts
        февраль.24/05-02-24/2956.ts
        февраль.24/05-02-24/2960.ts
        февраль.24/05-02-24/2965.ts
        февраль.24/05-02-24/2970.ts
        февраль.24/05-02-24/2974.ts
        февраль.24/05-02-24/2980.ts
        февраль.24/05-02-24/2996.ts
        февраль.24/05-02-24/3000.ts
        февраль.24/05-02-24/3005.ts
        февраль.24/05-02-24/3010.ts
        февраль.24/05-02-24/3014.ts
        февраль.24/05-02-24/3019.ts
        февраль.24/05-02-24/387.ts
        февраль.24/06-02-24/2815.ts
        февраль.24/06-02-24/2824.ts
        февраль.24/06-02-24/2828.ts
        февраль.24/06-02-24/2833.ts
        февраль.24/06-02-24/2839.ts
        февраль.24/06-02-24/2843.ts
        февраль.24/06-02-24/2848.ts
        февраль.24/06-02-24/2855.ts
        февраль.24/06-02-24/2859.ts
        февраль.24/06-02-24/2864.ts
        февраль.24/06-02-24/2869.ts
        февраль.24/06-02-24/2873.ts
        февраль.24/06-02-24/2894.ts
        февраль.24/06-02-24/2899.ts
        февраль.24/06-02-24/2903.ts
        февраль.24/06-02-24/2908.ts
        февраль.24/06-02-24/2913.ts
        февраль.24/06-02-24/2917.ts
        февраль.24/06-02-24/2923.ts
        февраль.24/06-02-24/49.ts
        февраль.24/07-02-24/2595.ts
        февраль.24/07-02-24/2600.ts
        февраль.24/07-02-24/2605.ts
        февраль.24/07-02-24/2609.ts
        февраль.24/07-02-24/2614.ts
        февраль.24/07-02-24/2643.ts
        февраль.24/07-02-24/2644.ts
        февраль.24/07-02-24/2651.ts
        февраль.24/07-02-24/2652.ts
        февраль.24/07-02-24/2656.ts
        февраль.24/07-02-24/2660.ts
        февраль.24/07-02-24/2670.ts
        февраль.24/07-02-24/2678.ts
        февраль.24/07-02-24/2682.ts
        февраль.24/07-02-24/2696.ts
        февраль.24/07-02-24/2697.ts
        февраль.24/07-02-24/2710.ts
        февраль.24/07-02-24/2716.ts
        февраль.24/07-02-24/2717.ts
        февраль.24/07-02-24/2729.ts
        февраль.24/07-02-24/2733.ts
        февраль.24/07-02-24/2739.ts
        февраль.24/07-02-24/2744.ts
        февраль.24/07-02-24/2748.ts
        февраль.24/07-02-24/2760.ts
        февраль.24/07-02-24/2765.ts
        февраль.24/07-02-24/2769.ts
        февраль.24/07-02-24/2778.ts
        февраль.24/07-02-24/2784.ts
        февраль.24/07-02-24/2788.ts
        февраль.24/07-02-24/2798.ts
        февраль.24/07-02-24/2806.ts
        февраль.24/07-02-24/2810.ts
        февраль.24/07-02-24/451.ts
        февраль.24/08-02-24/2582.ts
        февраль.24/08-02-24/2586.ts
        февраль.24/09-02-24/2511.ts
        февраль.24/09-02-24/2515.ts
        февраль.24/09-02-24/2520.ts
        февраль.24/09-02-24/2525.ts
        февраль.24/09-02-24/2529.ts
        февраль.24/09-02-24/2535.ts
        февраль.24/09-02-24/2540.ts
        февраль.24/09-02-24/2544.ts
        февраль.24/09-02-24/2549.ts
        февраль.24/09-02-24/2553.ts
        февраль.24/09-02-24/2558.ts
        февраль.24/09-02-24/2562.ts
        февраль.24/09-02-24/2566.ts
        февраль.24/09-02-24/2570.ts
        февраль.24/09-02-24/2574.ts
        февраль.24/09-02-24/2578.ts
        февраль.24/09-02-24/368.ts
        февраль.24/10-02-24/2404.ts
        февраль.24/10-02-24/2409.ts
        февраль.24/10-02-24/2413.ts
        февраль.24/10-02-24/2418.ts
        февраль.24/10-02-24/2423.ts
        февраль.24/10-02-24/2427.ts
        февраль.24/10-02-24/2432.ts
        февраль.24/10-02-24/2437.ts
        февраль.24/10-02-24/2441.ts
        февраль.24/10-02-24/2446.ts
        февраль.24/10-02-24/2451.ts
        февраль.24/10-02-24/2455.ts
        февраль.24/10-02-24/2460.ts
        февраль.24/10-02-24/2465.ts
        февраль.24/10-02-24/2469.ts
        февраль.24/10-02-24/2475.ts
        февраль.24/10-02-24/2481.ts
        февраль.24/10-02-24/2485.ts
        февраль.24/10-02-24/2490.ts
        февраль.24/10-02-24/2496.ts
        февраль.24/10-02-24/2500.ts
        февраль.24/10-02-24/2506.ts
        февраль.24/10-02-24/647.ts
        февраль.24/11-02-24/2303.ts
        февраль.24/11-02-24/2309.ts
        февраль.24/11-02-24/2315.ts
        февраль.24/11-02-24/2319.ts
        февраль.24/11-02-24/2325.ts
        февраль.24/11-02-24/2331.ts
        февраль.24/11-02-24/2335.ts
        февраль.24/11-02-24/2341.ts
        февраль.24/11-02-24/2347.ts
        февраль.24/11-02-24/2351.ts
        февраль.24/11-02-24/2357.ts
        февраль.24/11-02-24/2363.ts
        февраль.24/11-02-24/2367.ts
        февраль.24/11-02-24/2373.ts
        февраль.24/11-02-24/2379.ts
        февраль.24/11-02-24/2383.ts
        февраль.24/11-02-24/2389.ts
        февраль.24/11-02-24/2395.ts
        февраль.24/11-02-24/2399.ts
        февраль.24/11-02-24/3033.ts
        февраль.24/12-02-24/2206.ts
        февраль.24/12-02-24/2210.ts
        февраль.24/12-02-24/2215.ts
        февраль.24/12-02-24/2220.ts
        февраль.24/12-02-24/2224.ts
        февраль.24/12-02-24/2231.ts
        февраль.24/12-02-24/2235.ts
        февраль.24/12-02-24/2236.ts
        февраль.24/12-02-24/2239.ts
        февраль.24/12-02-24/2243.ts
        февраль.24/12-02-24/2248.ts
        февраль.24/12-02-24/2255.ts
        февраль.24/12-02-24/2259.ts
        февраль.24/12-02-24/2269.ts
        февраль.24/12-02-24/2273.ts
        февраль.24/12-02-24/2278.ts
        февраль.24/12-02-24/2283.ts
        февраль.24/12-02-24/2287.ts
        февраль.24/12-02-24/2293.ts
        февраль.24/12-02-24/2299.ts
        февраль.24/13-02-24/2103.ts
        февраль.24/13-02-24/2108.ts
        февраль.24/13-02-24/2114.ts
        февраль.24/13-02-24/2119.ts
        февраль.24/13-02-24/2124.ts
        февраль.24/13-02-24/2129.ts
        февраль.24/13-02-24/2133.ts
        февраль.24/13-02-24/2138.ts
        февраль.24/13-02-24/2148.ts
        февраль.24/13-02-24/2154.ts
        февраль.24/13-02-24/2160.ts
        февраль.24/13-02-24/2164.ts
        февраль.24/13-02-24/2169.ts
        февраль.24/13-02-24/2176.ts
        февраль.24/13-02-24/2180.ts
        февраль.24/13-02-24/2185.ts
        февраль.24/13-02-24/2190.ts
        февраль.24/13-02-24/2194.ts
        февраль.24/13-02-24/2200.ts
        февраль.24/14-02-24/2149.ts
        февраль.24/15-02-24/2971.ts
        февраль.24/16-02-24/1481.ts
        февраль.24/17-02-24/1642.ts
        февраль.24/19-02-24/231.ts
        февраль.24/21-02-24/2078.ts
        февраль.24/21-02-24/2085.ts
        февраль.24/21-02-24/2089.ts
        февраль.24/21-02-24/2094.ts
        февраль.24/21-02-24/3038.ts
        февраль.24/21-02-24/3042.ts
        февраль.24/22-02-24/2032.ts
        февраль.24/22-02-24/2037.ts
        февраль.24/22-02-24/2042.ts
        февраль.24/22-02-24/2053.ts
        февраль.24/22-02-24/2057.ts
        февраль.24/22-02-24/2062.ts
        февраль.24/22-02-24/2068.ts
        февраль.24/22-02-24/2073.ts
        февраль.24/22-02-24/997.ts
        февраль.24/23-02-24/1886.ts
        февраль.24/23-02-24/1893.ts
        февраль.24/23-02-24/1909.ts
        февраль.24/23-02-24/1925.ts
        февраль.24/23-02-24/1935.ts
        февраль.24/23-02-24/1941.ts
        февраль.24/23-02-24/1945.ts
        февраль.24/23-02-24/1952.ts
        февраль.24/23-02-24/1957.ts
        февраль.24/23-02-24/1961.ts
        февраль.24/23-02-24/1967.ts
        февраль.24/23-02-24/1974.ts
        февраль.24/23-02-24/1979.ts
        февраль.24/23-02-24/1984.ts
        февраль.24/23-02-24/1991.ts
        февраль.24/23-02-24/1995.ts
        февраль.24/23-02-24/2000.ts
        февраль.24/23-02-24/2006.ts
        февраль.24/23-02-24/2011.ts
        февраль.24/23-02-24/2016.ts
        февраль.24/23-02-24/2027.ts
        февраль.24/23-02-24/2099.ts
        февраль.24/23-02-24/2144.ts
        февраль.24/23-02-24/2900.ts
        февраль.24/24-02-24/1800.ts
        февраль.24/24-02-24/1805.ts
        февраль.24/24-02-24/1812.ts
        февраль.24/24-02-24/1816.ts
        февраль.24/24-02-24/1827.ts
        февраль.24/24-02-24/1832.ts
        февраль.24/24-02-24/1837.ts
        февраль.24/24-02-24/1844.ts
        февраль.24/24-02-24/1848.ts
        февраль.24/24-02-24/1854.ts
        февраль.24/24-02-24/1859.ts
        февраль.24/24-02-24/1863.ts
        февраль.24/24-02-24/1869.ts
        февраль.24/24-02-24/1880.ts
        февраль.24/26-02-24/100.ts
        февраль.24/26-02-24/1710.ts
        февраль.24/26-02-24/1720.ts
        февраль.24/26-02-24/1725.ts
        февраль.24/26-02-24/1732.ts
        февраль.24/26-02-24/1736.ts
        февраль.24/26-02-24/1742.ts
        февраль.24/26-02-24/1748.ts
        февраль.24/26-02-24/1752.ts
        февраль.24/26-02-24/1763.ts
        февраль.24/26-02-24/1773.ts
        февраль.24/26-02-24/1779.ts
        февраль.24/26-02-24/1784.ts
        февраль.24/26-02-24/1790.ts
        февраль.24/26-02-24/1791.ts
        февраль.24/26-02-24/1796.ts
        февраль.24/27-02-24/1603.ts
        февраль.24/27-02-24/1608.ts
        февраль.24/27-02-24/1614.ts
        февраль.24/27-02-24/1619.ts
        февраль.24/27-02-24/1629.ts
        февраль.24/27-02-24/1636.ts
        февраль.24/27-02-24/1640.ts
        февраль.24/27-02-24/1646.ts
        февраль.24/27-02-24/1652.ts
        февраль.24/27-02-24/1656.ts
        февраль.24/27-02-24/1668.ts
        февраль.24/27-02-24/1678.ts
        февраль.24/27-02-24/1684.ts
        февраль.24/27-02-24/1694.ts
        февраль.24/27-02-24/543.ts
        февраль.24/28-02-24/1588.ts
        февраль.24/28-02-24/1598.ts
        февраль.24/28-02-24/513.ts
        февраль.24/29-02-24/1005.ts
        февраль.24/29-02-24/1013.ts
        февраль.24/29-02-24/1217.ts
        февраль.24/29-02-24/1221.ts
        февраль.24/29-02-24/1323.ts
        февраль.24/29-02-24/1337.ts
        февраль.24/29-02-24/1346.ts
        февраль.24/29-02-24/1351.ts
        февраль.24/29-02-24/1365.ts
        февраль.24/29-02-24/1380.ts
        февраль.24/29-02-24/1385.ts
        февраль.24/29-02-24/1389.ts
        февраль.24/29-02-24/1394.ts
        февраль.24/29-02-24/1403.ts
        февраль.24/29-02-24/1408.ts
        февраль.24/29-02-24/1413.ts
        февраль.24/29-02-24/1437.ts
        февраль.24/29-02-24/1450.ts
        февраль.24/29-02-24/1460.ts
        февраль.24/29-02-24/1470.ts
        февраль.24/29-02-24/1475.ts
        февраль.24/29-02-24/1480.ts
        февраль.24/29-02-24/1528.ts
        февраль.24/29-02-24/1534.ts
        февраль.24/29-02-24/1539.ts
        февраль.24/29-02-24/1550.ts
        февраль.24/29-02-24/1560.ts
        февраль.24/29-02-24/1566.ts
        февраль.24/29-02-24/1609.ts
        февраль.24/29-02-24/3046.ts
        январь.24/01-01-24/455.ts
        январь.24/02-01-24/2610.ts
        январь.24/03-01-24/2125.ts
        январь.24/05-01-24/300.ts
        январь.24/06-01-24/1235.ts
        январь.24/07-01-24/413.ts
        январь.24/08-01-24/938.ts
        январь.24/09-01-24/872.ts
        январь.24/10-01-24/2385.ts
        январь.24/12-01-24/1704.ts
        январь.24/13-01-24/1347.ts
        январь.24/14-01-24/1657.ts
        январь.24/15-01-24/2225.ts
        январь.24/16-01-24/380.ts
        январь.24/17-01-24/1207.ts
        январь.24/19-01-24/931.ts
        январь.24/20-01-24/907.ts
        январь.24/21-01-24/198.ts
        январь.24/22-01-24/645.ts
        январь.24/23-01-24/1239.ts
        январь.24/24-01-24/118.ts
        январь.24/24-01-24/1402.ts
        январь.24/24-01-24/1641.ts
        январь.24/24-01-24/338.ts
        январь.24/24-01-24/746.ts
        январь.24/25-01-24/1143.ts
        январь.24/26-01-24/1971.ts
        январь.24/27-01-24/629.ts
        январь.24/28-01-24/1074.ts
        январь.24/28-01-24/560.ts
        январь.24/29-01-24/14.ts
        январь.24/29-01-24/1456.ts
        январь.24/29-01-24/232.ts
        январь.24/30-01-24/150.ts
        январь.24/31-01-24/739.ts
        package.json
        README.md
        tsconfig.json
        yarn.lock
        март.24/14-03-24/1446.cpp
)
